tests/src/frontend/typechecking/invalid/mutable_class_object_4.sk
mutable class Foo<T>(mutable v: T)

fun no(x: mutable Foo<mutable Foo<Int>>): void {
  _ = class(x)(Foo(42))
}
